examples/type_system/failing/31_direct_time_builtin_missing_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/31_direct_time_builtin_missing_effect.flx
// error[E400]: Missing Ambient Effect
//
// Call to `now_ms` requires effect `Clock` in this function signature.
//
//   examples/type_system/failing/31_direct_time_builtin_missing_effect.flx:24:5
//    |
// 24 |     now_ms()
//    |     ^^^^^^^^
//    |     -------- effectful call occurs here
//
// Hint:
//   Add `with Clock` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: direct Time builtin call inside function with incompatible ambient effects.

fn bad_clock() -> Int with IO {
    now_ms()
}

fn main() -> Unit with IO {
    bad_clock();
}
